CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
project("arm_toolchain_devcontainer")
find_program(CCACHE_FOUND ccache)
if(CCACHE_FOUND)
  MESSAGE(STATUS "Using CCACHE as ${CCACHE_FOUND}")
  set(CMAKE_C_COMPILER_LAUNCHER ${CCACHE_FOUND})
  set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE_FOUND})
endif()
add_subdirectory(arm-toolchain/arm-software/embedded)
